--- a/service-workers/index.html
+++ b/service-workers/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head></head>
     <body>
-        <p>Registration status: <strong id="status"></strong></p>
+        <p>Registration stwwatus: <strong id="status"></strong></p>
         <script> 
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register(
